--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -3487,7 +3487,7 @@
 					<th data-i18n="BE">BE</th>
 					<th data-i18n="FW">Fw</th>
 					<th data-i18n="Mod">Mod</th>
-					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info<span data-i18n="Talent-Erklärung">Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span></span></th>
+					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info <span>Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span></span></th>
 					<th data-i18n="Text">Proben</th>
 				</tr>
 				<tr><td data-i18n="Klettern">Klettern</td>
@@ -3849,7 +3849,7 @@
 					<th data-i18n="Fw">Fw</th>
 					<th data-i18n="Anmerkung">Anmerkung</th>
 					<th data-i18n="Mod">Mod</th>
-					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info<span data-i18n="Talent-Erklärung">Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span></span></th>
+					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info <span>Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span></span></th>
 					<th data-i18n="Proben">Proben</th>
 				</tr>
 				<tr><td data-i18n="Fliegen">Fliegen</td>
@@ -4399,7 +4399,7 @@
 					<th data-i18n="Fw">Fw</th>
 					<th data-i18n="Anmerkung">Anmerkung</th>
 					<th data-i18n="Mod">Mod</th>
-					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info<span data-i18n="Talent-Erklärung">Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span></span></th>
+					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info <span>Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span></span></th>
 					<th data-i18n="Proben">Proben</th>
 				</tr>
 				<tr><td data-i18n="Bekehren-und-Überzeugen">Bekehren &amp; Überzeugen</td>
@@ -4860,7 +4860,7 @@
 					<th data-i18n="Fw">Fw</th>
 					<th data-i18n="Anmerkung">Anmerkung</th>
 					<th data-i18n="Mod">Mod</th>
-					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info<span data-i18n="Talent-Erklärung">Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS</span></span></th>
+					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info <span>Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS</span></span></th>
 					<th data-i18n="Proben">Proben</th>
 				</tr>
 				<tr><td data-i18n="Fährtensuchen">Fährtensuchen</td>
@@ -5258,7 +5258,7 @@
 					<th data-i18n="Fw">Fw</th>
 					<th data-i18n="Anmerkung">Anmerkung</th>
 					<th data-i18n="Mod">Mod</th>
-					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info<span data-i18n="Talent-Erklärung">Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span></span></th>
+					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info <span>Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span></span></th>
 					<th data-i18n="Proben">Proben</th>
 				</tr>
 				<tr><td data-i18n="Brett-und-Glückspiel">Brett- & Glücksspiel</td>
@@ -5766,7 +5766,7 @@
 					<th data-i18n="Fw">Fw</th>
 					<th data-i18n="Anmerkung">Anmerkung</th>
 					<th data-i18n="Mod">Mod</th>
-					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info<span data-i18n="Talent-Erklärung">Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span></span></th>
+					<th><span class="sheet-tooltip-ef" data-i18n="Info">Info <span>Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span></span></th>
 					<th data-i18n="Proben">Proben</th>
 				</tr>
 				<tr><td data-i18n="Alchimie">Alchimie</td>
