fix reduce of health attrs, and update comments

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -3237,16 +3237,19 @@
     });
 
     const healthTraits = ["healthbox"];
+    // Create array of all health attribute names, with values 1 through 24 for each health trait.
     const healthAttrs = healthTraits
         .reduce((attrs, trait) => [
+            ...attrs,
             ...new Array(24)
                 .fill(1)
                 .map((_, index) => `${trait}_${index + 1}`)
         ], []);
 
-    // Increment / cycle hidden attr on damage button click
+    // Register button click event for each health attribute
     healthAttrs.forEach(attr => {
         on(`clicked:${attr}`, () => {
+            // Increment / cycle corresponding attribute value
             getAttrs([attr], (v) => {
                 const healthValue = parseInt(v[attr]) || 0;
                 setAttrs({
