--- a/Nuestro-ultimo-verano/nuestroultimoverano.html
+++ b/Nuestro-ultimo-verano/nuestroultimoverano.html
@@ -365,7 +365,7 @@
 		});
 	});
 		
-    on("change:clase_pj sheet:opened", function () {
+    on("change:clase_pj", function () {
         getAttrs(['clase_pj', 'constitution_mod'], function(values) {
             var hp_max = parseInt(values.constitution_mod, 10)||0;
             
