--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -3392,7 +3392,6 @@
 				</tr>
 				<tr align="center">
 					<td data-i18n="Schmerz">Schmerz</td>
-					<input type="hidden" name="attr_Schmerz_max" value="4">
 					<td><input type="radio" name="attr_Schmerz" value="0" checked="checked" readonly></td>
 					<td><input type="radio" name="attr_Schmerz" value="1" readonly></td>
 					<td><input type="radio" name="attr_Schmerz" value="2" readonly></td>
@@ -3420,7 +3419,7 @@
 			<table>
 				<tr>
 					<td data-i18n="Abzüge-gesamt">Abzüge gesamt:</td>
-					<td><input name="attr_Zustand_Mod" type="number" disabled="true" value="-1*(@{Betaeubung} + @{Entrueckt} + @{Furcht} + @{Paralyse} + @{Verwirrung} + (((@{Schmerz} + @{schmerz_korr}) + abs(@{Schmerz} + @{schmerz_korr}))/2) )" /></td>
+					<td><input name="attr_Zustand_Mod" type="number" disabled="true" value="-1*(@{Betaeubung} + @{Entrueckt} + @{Furcht} + @{Paralyse} + @{Verwirrung} + ((@{Schmerz} - @{vorteil_zaeher_hund}) + abs(@{Schmerz} - @{vorteil_zaeher_hund})) / 2)" /> </td>
 				</tr>
 				<tr>
 					<td data-i18n="Abzüge-effektiv-ohne-BE">Abzüge effektiv ohne BE:</td>
@@ -18002,41 +18001,37 @@ on("change:le_spezies change:ko_wert change:vorteil_hohe_lebenskraft change:vort
 	setAttrs({ LE_Grundwert: i, LE_Wert_max: i}) ;
 	});
 });
-
-//Spieler darf selber Schmerz nicht ändern
+// User darf selber schmerzstufe nicht via buttons ändern
 on("change:schmerz", function(eventInfo) {
 	if (eventInfo.sourceType == "player") {
-		setAttrs({ Schmerz: eventInfo.previousValue, Schmerz_max: 4 }) ;
+		var a = (parseInt(eventInfo.previousValue)||0) ;
+		setAttrs({ Schmerz: a }) ;
 	}
 });
-	
+
 //automatisch Schmerzstufe ermitteln
 on("change:le_wert change:le_grundwert change:vorteil_zaeher_hund change:nachteil_zerbrechlich change:schmerz_korr", function() {
 	getAttrs(["LE_Wert", "LE_Grundwert", "vorteil_zaeher_hund", "nachteil_zerbrechlich", "schmerz_korr"], function(values) {
 	var i, le, s1, s2, s3 ;
 	i = 0 ;
-	le = parseInt(values.LE_Wert) // = IST LeP im Sheet, Usereingabe
-	s1 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.25) ; 
-	s2 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.5) ;
-	s3 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.75) ;
+	le = parseInt(values.LE_Wert) 																// = aktuelle Lebenspunkte, Usereingabe
+	s1 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.25) ; 	//Schmerzschwelle 1
+	s2 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.5) ;  	//Schmerzschwelle 2
+	s3 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.75) ; 	//Schmerzschwelle 3
+	i = i + parseInt(values.schmerz_korr) ; 													//Korrekturwert, Usereingabe
 		if (le <= s1) { 
 			i++ ; 
-		}	
-		if (values.nachteil_zerbrechlich == 1 && i > 0) { //wenn schmerz > 0, addiere zerbrechlich-Nachteil
+		}	if (le <= s2) {
+			i++ ;
+		} 	if (le <= s3) {
+			i++;
+		} 	if (le <= 5) {
+			i++;
+		} 	if (values.nachteil_zerbrechlich == 1 && i > 0) { 									//wenn schmerz > 0, addiere Nachteil Zerbrechlich
 			i++ ;
 		}
-		if (le <= s2) {
-			i++ ;
-		} 
-		if (le <= s3) {
-			i++;
-		}
-		if (le <= 5) {
-			i++;
-		}
-	i = i + parseInt(values.schmerz_korr) ;
 	i = Math.min(Math.max(parseInt(i), 0), 4) ;
-		setAttrs({ Schmerz: i, Schmerz_max: 4 }) ;
+		setAttrs({ Schmerz: i }) ;
 	});
 });
 
