--- a/Les Chroniques d'Enyllion/Enyllion.html
+++ b/Les Chroniques d'Enyllion/Enyllion.html
@@ -157,12 +157,16 @@
 			</div>
 			<div class="dark_row" style="display:inline-block;">
 			<div class="title" style="font-effect:engrave" >Traits de caractère</div>
-			<textarea type="text" name="attr_Folies"  style="margin-top:5px;width:340px;height:40px;"></textarea>
+			<textarea type="text" name="attr_TraitsDeCaracteres"  style="margin-top:5px;width:340px;height:40px;"></textarea>
 			</div>
 			<div class="dark_row" style="display:inline-block;">
 			<div class="title" style="font-effect:engrave" >Langages parlés</div>
-			<textarea type="text" name="attr_Cicatrices"  style="margin-top:5px;width:340px;height:40px;"></textarea>
-			<br><br><br><br><br>
+			<textarea type="text" name="attr_Langages"  style="margin-top:5px;width:340px;height:40px;"></textarea>
+			</div>
+			<div class="dark_row" style="display:inline-block;">
+			<div class="title" style="font-effect:engrave" >Compétences</div>
+			<textarea type="text" name="attr_Competences"  style="margin-top:5px;width:340px;height:40px;"></textarea>
+			<br><br>
 			</div>
 		</div>
 		<!-- fin colonne de droite -->
