new cult and translation
added new cult (Namenloser) and generated new translation.json file

--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -15580,6 +15580,7 @@
 					<option value="Ingerimm" data-i18n="Ingerimm">Ingerimm</option>
 					<option value="Efferd" data-i18n="Efferd">Efferd</option>
 					<option value="Rahja" data-i18n="Rahja">Rahja</option>
+					<option value="Namenloser" data-i18n="Namenloser">Namenloser</option>
 				</select>
 			<div align="left" style="display:inline-block" data-i18n="Leiteigenschaft">Leiteigenschaft: </div>
 				<select type="number" name="attr_tradition_goetter_leiteigenschaft" style="width: 10em;">
@@ -18220,6 +18221,9 @@ on("change:tradition_goetter", function() {
 		}
 		if (values.tradition_goetter == "Rahja") {
 			setAttrs({ tradition_goetter_leiteigenschaft: "CH" });
+		}
+		if (values.tradition_goetter == "Namenloser") {
+			setAttrs({ tradition_goetter_leiteigenschaft: "MU" });
 		}
 	});
 });
