special ability fixed
fixed "ritter des alten wegs" stil and added translation for box (no more overflow)

--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -8430,7 +8430,7 @@
 								<b>Kampftechnik:</b> alle Nahkampftechniken<br>
 								<b>Publikation:</b> VR02 - Aventurisches Kompendium I S. 160</span></div>
 								<input type="checkbox" class="sheet-checkbox-tab sheet-tab01" name="attr_Kampfstil-Ritter_des_Alten_Wegs-Stil" value="1"/><span class="sheet-checkbox-tab sheet-tab01" data-i18n="Ritter-des-Alten-Wegs">Ritter des Alten Wegs</span>
-								<input style="display:none;" type="number" name="attr_Kampfstil-Ritter_des_Alten_Wegs-Stil_TP_Mod" value="2*@{Kampfstil-Ritter_des_Alten_Wegs-Stil}" disabled="true"/>
+								<input style="display:none;" type="number" name="attr_Kampfstil-Ritter_des_Alten_Wegs-Stil_TP_Mod" value="@{Kampfstil-Ritter_des_Alten_Wegs-Stil} * @{Reiten_aktiv}" disabled="true"/>
 							</div>
 						<input class="hidden sheet-sf-aktiviert" type="checkbox" name="attr_ks-Rondras_Trutz-Stil" value="1" />
 							<div class="sheet-sf-row">
@@ -8807,7 +8807,7 @@
 							<tr>
 								<td data-i18n="Vorteilhafte-Position:">Vorteilhafte Position:</td>
 								<td><input name="attr_Vorteilhafte_Position" type="checkbox" value="1"/></td>
-								<td><input name="attr_Vorteilhafte_Position_Waffe_AT" type="number" value="(@{Vorteilhafte_Position}*2) + (@{Kampfstil-Baliho-Stil} * @{Reiten_aktiv} * @{Vorteilhafte_Position}) + (@{Kampfstil-Ritter_des_Alten_Wegs-Stil} * @{Reiten_aktiv} * @{Vorteilhafte_Position})" disabled="true"/></td>
+								<td><input name="attr_Vorteilhafte_Position_Waffe_AT" type="number" value="(@{Vorteilhafte_Position}*2) + (@{Kampfstil-Baliho-Stil} * @{Reiten_aktiv} * @{Vorteilhafte_Position}) + ( 2*(@{Kampfstil-Ritter_des_Alten_Wegs-Stil}) * @{Reiten_aktiv} * @{Vorteilhafte_Position})" disabled="true"/></td>
 								<td><input name="attr_Vorteilhafte_Position_Waffe_PA" type="number" value="(@{Vorteilhafte_Position}*2) + (@{Kampfstil-Baliho-Stil} * @{Reiten_aktiv} * @{Vorteilhafte_Position})" disabled="true"/></td>
 							</tr>
 							<tr>
@@ -10376,7 +10376,7 @@
 								<img align="center" src="https://i.imgur.com/3U7ik0k.png" />
 								<span><div data-i18n="Mit-Berechnungen-implementiert">Mit Berechnungen implementiert</div></span></span></td>
 							</tr>
-						<tr><td data-i18n="Ritter-des-Alten-Wegs">Ritter des Alten Wegs-Stil:</td>
+						<tr><td data-i18n="Ritter-des-Alten-Wegs-stil">Ritter des Alten Wegs-Stil:</td>
 							<td><input type="checkbox" name="attr_ks-Ritter_des_alten_Wegs-Stil" value="1"/></td>
 							<td><span class="sheet-tooltip-ef">
 								<img align="center" src="https://i.imgur.com/3U7ik0k.png" />
