fix translation bug and white space in notes

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1,5 +1,5 @@
 
-<input name="attr_version" type="hidden" value="4.14"/>
+<input name="attr_version" type="hidden" value="4.15"/>
 <input class="sheet_type" name="attr_sheet_type" type="hidden" value="pc"/>
 <input class="character-type" name="attr_flag_special" type="hidden" value="mundane"/>
 <div class="pc">
@@ -544,7 +544,7 @@
 <option value="Cybercombat" data-i18n="cybercombat">Cybercombat</option>
 <option value="Cybertechnology" data-i18n="cybertechnology">Cybertechnology</option>
 <option value="Demolitions" data-i18n="demolitions">Demolitions</option>
-<option value="Electronic Warfare" data-i18n="eletronicwarfare">Electronic Warfare</option>
+<option value="Electronic Warfare" data-i18n="electronicwarfare">Electronic Warfare</option>
 <option value="First Aid" data-i18n="firstaid">First Aid</option>
 <option value="Forgery" data-i18n="forgery">Forgery</option>
 <option value="Hacking" data-i18n="hacking">Hacking</option>
@@ -2700,7 +2700,7 @@
 <option value="Cybercombat" data-i18n="cybercombat">Cybercombat</option>
 <option value="Cybertechnology" data-i18n="cybertechnology">Cybertechnology</option>
 <option value="Demolitions" data-i18n="demolitions">Demolitions</option>
-<option value="Electronic Warfare" data-i18n="eletronicwarfare">Electronic Warfare</option>
+<option value="Electronic Warfare" data-i18n="electronicwarfare">Electronic Warfare</option>
 <option value="First Aid" data-i18n="firstaid">First Aid</option>
 <option value="Forgery" data-i18n="forgery">Forgery</option>
 <option value="Hacking" data-i18n="hacking">Hacking</option>
