New Sheet theme
Empire

--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
@@ -11738,14 +11738,15 @@
 			
 			<div class="sheet-row sheet-spell-header">
 				<div class="sheet-col-1 sheet-vert-bottom sheet-center sheet-small-label">
-					<span>CS Light & Dark Mode</span>
+					<span>Sheet UI Theme</span>
 				</div>
 			</div>
 			<div class="sheet-row sheet-mar-b-md">
 				<div class="sheet-col-1 sheet-pad-r-md">
 					<select class="sheet-select-no-arrow" name="attr_background">
-						<option value="1" selected="selected">Light Mode</option>
-						<option value="2">Dark Mode</option>
+						<option value="1" selected="selected">Light Theme</option>
+						<option value="2">Dark Theme</option>
+						<option value="3">Empire Theme</option>		
 					</select>
 				</div>
 			</div>
