[Ryuutama]: fixing overflow issues

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -651,7 +651,7 @@
                         <label class='headerLabel spellsLabel'>Spells/Music/Other Abilities</label>
                     </div>
 
-                    <div class="spell-details">
+                    <div class="spell-details checkboxLabel">
                         <span class="spellName"> </span>
                         <span class="spellCost">MP</span>
                         <span class="spellDuration">Duration</span>
@@ -666,8 +666,8 @@
                             <button class='skill-check-button spell-details' type='roll' value='&{template:spell} {{name=@{spellName}}} {{cost=@{spellCost}}} {{duration=@{spellDuration}}} {{target=@{spellTarget}}} {{range=@{spellRange}}} {{effect=@{spellEffect}}} ' name='roll_repeatingSpellCard'>
                                 <span class='spellName' name="attr_spellName"></span>
                                 <span class='spellCost' name="attr_spellCost"></span>
-                                <span class='spellDuration' name="attr_spellDuration"></span>
-                                <span class='spellTarget' name="attr_spellTarget"></span>
+                                <span class='spellDuration ellipsis' name="attr_spellDuration"></span>
+                                <span class='spellTarget ellipsis' name="attr_spellTarget"></span>
                                 <span class='spellRange' name="attr_spellRange"></span>
                                 <span class='spellTypes' name="attr_spellType"></span>
                             </button>
