convert unit test to QUnit. Break up pugs into tabs

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1261,19 +1261,19 @@
         <div class="header htab">
           <div class="triangle"></div>
           <input class="magic-toggle" name="attr_magic_toggle" title="@{magic_toggle}" type="radio" value="spells" checked="checked"/>
-          <h1 data-i18n="spells">Spells</h1>
+          <h1 data-i18n="spells"></h1>
           <div class="right-tri"></div>
         </div>
         <div class="header htab">
           <div class="triangle"></div>
           <input class="magic-toggle" name="attr_magic_toggle" title="@{magic_toggle}" type="radio" value="preps"/>
-          <h1 data-i18n="prep">Prep...</h1>
+          <h1 data-i18n="preps"></h1>
           <div class="right-tri"></div>
         </div>
         <div class="header htab">
           <div class="triangle"></div>
           <input class="magic-toggle" name="attr_magic_toggle" title="@{magic_toggle}" type="radio" value="rituals"/>
-          <h1 data-i18n="rituals">Rituals</h1>
+          <h1 data-i18n="rituals"></h1>
           <div class="right-tri"></div>
         </div>
       </div>
