[Ryuutama]: missed a class

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -668,7 +668,7 @@
                                 <span class='spellCost' name="attr_spellCost"></span>
                                 <span class='spellDuration ellipsis' name="attr_spellDuration"></span>
                                 <span class='spellTarget ellipsis' name="attr_spellTarget"></span>
-                                <span class='spellRange' name="attr_spellRange"></span>
+                                <span class='spellRange ellipsis' name="attr_spellRange"></span>
                                 <span class='spellTypes' name="attr_spellType"></span>
                             </button>
 
