[Ryuutama]: adding dropdown options, adding text wrap to some spans

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -666,9 +666,9 @@
                             <button class='skill-check-button spell-details' type='roll' value='&{template:spell} {{name=@{spellName}}} {{cost=@{spellCost}}} {{duration=@{spellDuration}}} {{target=@{spellTarget}}} {{range=@{spellRange}}} {{effect=@{spellEffect}}} ' name='roll_repeatingSpellCard'>
                                 <span class='spellName' name="attr_spellName"></span>
                                 <span class='spellCost' name="attr_spellCost"></span>
-                                <span class='spellDuration ellipsis' name="attr_spellDuration"></span>
-                                <span class='spellTarget ellipsis' name="attr_spellTarget"></span>
-                                <span class='spellRange ellipsis' name="attr_spellRange"></span>
+                                <span class='spellDuration spellWrap' name="attr_spellDuration"></span>
+                                <span class='spellTarget spellWrap' name="attr_spellTarget"></span>
+                                <span class='spellRange spellWrap' name="attr_spellRange"></span>
                                 <span class='spellTypes' name="attr_spellType"></span>
                             </button>
 
@@ -701,11 +701,16 @@
                                     <select name="attr_spellType" class="sheet-spellTypes">
                                         <option value=""></option>
                                         <option value="Incantation">Incantation</option>
+                                        <option value="Incantation (Ritual)">Incantation (Ritual)</option>
                                         <option value="Music">Music</option>
-                                        <option value="Spring">Seasonal (Spring)</option>
-                                        <option value="Summer">Seasonal (Summer)</option>
-                                        <option value="Fall">Seasonal (Fall)</option>
-                                        <option value="Winter">Seasonal (Winter)</option>
+                                        <option value="Spring">Spring</option>
+                                        <option value="Spring (Ritual)">Spring (Ritual)</option>
+                                        <option value="Summer">Summer</option>
+                                        <option value="Summer (Ritual)">Summer (Ritual)</option>
+                                        <option value="Fall">Fall</option>
+                                        <option value="Fall (Ritual)">Fall (Ritual)</option>
+                                        <option value="Winter">Winter</option>
+                                        <option value="Winter (Ritual)">Winter (Ritual)</option>
                                         <option value="Other">Other</option>
                                     </select>
                                 </div>
