convert roll template pug, add fade/draain to chat template

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -28,7 +28,7 @@
     <label class="switch" data-i18n-title="edge" title="edge">
       <input class="whisper-toggle" name="attr_edge_toggle" type="checkbox" value="@{edge}"/><span class="slider"></span>
     </label>
-    <button name="d6" title="Roll D6s" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{d6}}}{{base=^{d6}}}{{dice=[[(?{d6s|0}d6>5)]]}}">L</button>
+    <button name="d6" title="Roll D6s" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{d6}}}{{base=^{d6}}}{{dice=[[(?{d6s|0}d6>5@{explode_toggle})]]}}">L</button>
     <input name="attr_tab" type="hidden" value="options"/>
     <button class="pictos" name="act_tab_options" title="@{tab}" type="action">y</button>
     <button data-i18n="core" name="act_tab_core" type="action" title="@{tab}">core</button>
@@ -1320,7 +1320,8 @@
             <div class="rows repeating-container">
               <fieldset class="repeating_spell">
                 <input name="attr_dicepool" type="hidden" value="0"/>
-                <button name="roll_spell}" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}"><span name="attr_name"></span></button><span class="center" name="attr_type"></span><span class="center" name="attr_range"></span><span class="center" name="attr_duration"></span><span class="center" name="attr_drain"></span>
+                <button class="display-none" name="roll_drain" type="roll" value="@{gm_toggle} &amp;{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{drain}}}{{base=^{base}}}{{dice=[[((@{drain_attribute_1}+@{drain_attribute_2}+@{drain_modifier})+@{modifiers_toggle}+@{edge_toggle})d6&gt;5@{explode_toggle}]]}}"></button>
+                <button name="roll_spell" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]] [f](~repeating_spell_drain)}}"><span name="attr_name"></span></button><span class="center" name="attr_type"></span><span class="center" name="attr_range"></span><span class="center" name="attr_duration"></span><span class="center" name="attr_drain"></span>
                 <input class="collapse-flag" name="attr_display_flag" type="checkbox" checked="checked"/><span class="pictos">i</span>
                 <input class="settings-flag" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
                 <div class="collapse"><span name="attr_notes"></span></div>
@@ -1395,7 +1396,8 @@
             <div class="rows repeating-container">
               <fieldset class="repeating_preps">
                 <input name="attr_dicepool" type="hidden" value="0"/>
-                <button name="roll_preps}" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}"><span name="attr_name"></span></button><span class="center" name="attr_type"></span><span class="center" name="attr_range"></span><span class="center" name="attr_duration"></span><span class="center" name="attr_drain"></span>
+                <button class="display-none" name="roll_drain" type="roll" value="@{gm_toggle} &amp;{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{drain}}}{{base=^{base}}}{{dice=[[((@{drain_attribute_1}+@{drain_attribute_2}+@{drain_modifier})+@{modifiers_toggle}+@{edge_toggle})d6&gt;5@{explode_toggle}]]}}"></button>
+                <button name="roll_preps" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]] [f](~repeating_preps_drain)}}"><span name="attr_name"></span></button><span class="center" name="attr_type"></span><span class="center" name="attr_range"></span><span class="center" name="attr_duration"></span><span class="center" name="attr_drain"></span>
                 <input class="collapse-flag" name="attr_display_flag" type="checkbox" checked="checked"/><span class="pictos">i</span>
                 <input class="settings-flag" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
                 <div class="collapse"><span name="attr_notes"></span></div>
@@ -1794,7 +1796,8 @@
             </div>
             <fieldset class="repeating_forms">
               <input name="attr_dicepool" type="hidden" value="0"/>
-              <button name="roll_complex_form" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{base}}}{{dice=[[((@{skill}+@{dicepool}+@{resonance})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Level ?{Level|}, Fade [[?{Level|}+(@{fade})]]}}"><span name="attr_name"></span></button><span class="center eclipse" name="attr_c"></span><span class="center eclipse" name="attr_o"></span><span class="center eclipse" name="attr_m"></span><span class="center eclipse" name="attr_p"></span><span class="center eclipse" name="attr_l"></span><span class="center eclipse" name="attr_e"></span><span class="center eclipse" name="attr_x"></span><span class="center eclipse" name="attr_ "></span><span class="center eclipse" name="attr_f"></span><span class="center eclipse" name="attr_o"></span><span class="center eclipse" name="attr_r"></span><span class="center eclipse" name="attr_m"></span>
+              <button class="display-none" name="roll_fade" type="roll" value="@{gm_toggle} &amp;{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{fade}}}{{base=^{base}}}{{dice=[[((@{fade_attribute_1}+@{fade_attribute_2}+@{fade_modifier})+@{modifiers_toggle}+@{edge_toggle})d6&gt;5@{explode_toggle}]]}}"></button>
+              <button name="roll_complex_form" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{base}}}{{dice=[[((@{skill}+@{dicepool}+@{resonance})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Level ?{Level|}, Fade [[?{Level|}+(@{fade})]] [f](~repeating_forms_fade)}}"><span name="attr_name"></span></button><span class="center eclipse" name="attr_c"></span><span class="center eclipse" name="attr_o"></span><span class="center eclipse" name="attr_m"></span><span class="center eclipse" name="attr_p"></span><span class="center eclipse" name="attr_l"></span><span class="center eclipse" name="attr_e"></span><span class="center eclipse" name="attr_x"></span><span class="center eclipse" name="attr_ "></span><span class="center eclipse" name="attr_f"></span><span class="center eclipse" name="attr_o"></span><span class="center eclipse" name="attr_r"></span><span class="center eclipse" name="attr_m"></span>
               <input class="collapse-flag" name="attr_display_flag" type="checkbox"/><span class="pictos">i</span>
               <input class="settings-flag" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
               <div class="collapse"><span name="attr_notes"></span></div>
@@ -3241,35 +3244,33 @@
 </div>
 <div class="footer">
   <div><span data-i18n="copyrightfooter"></span><span>Version</span><span name="attr_version"></span></div><img alt="Emerald Productins, LLC" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/src/imgs//EProd_Emerald_Gloss.png"/>
-</div><div class="rolltemplates">
-	<!--Roll Template for rolling without Focus-->
-    <rolltemplate class="sheet-rolltemplate-rolls">
-    	<div class="sheet-template-body">
-	    	<div class="sheet-template-header">
-	    		{{#header}}{{header}}{{/header}}{{#spec}}<span> ({{spec}})</span>{{/spec}}<br />
-	    		{{#arm}}<span>{{arm}}</span>{{/arm}}
-	    		{{#base}}<span>{{base}}</span>{{/base}}
-	    		{{#rollLess() wound 0}}<span> ♦ </span><span data-i18n="wounds">Wounds</span>{{/rollLess() wound 0}}
-	    		{{#rollLess() mod 0}}<span> ♦ </span><span data-i18n="modifier">Modifier</span>{{/rollLess() mod 0}}
-	    		{{#rollGreater() mod 0}}<span> ♦ </span><span data-i18n="modifier">Modifier</span>{{/rollGreater() mod 0}}
-	    		{{#rollGreater() edge 0}}<span> ♦ </span><span data-i18n="edge">Edge</span>{{/rollGreater() edge 0}}
-	    	</div>
-	    		{{#dice}}<div class="sheet-template-row">{{dice}}</div>{{/dice}}
-	    		{{#desc}}
-	    			<div class="sheet-template-row">
-	    				<span class="sheet-template-desc">
-		    				{{desc}}
-		    				{{#rollGreater() rea 0}}, <span data-i18n="reach">Reach<span> {{rea}}{{/rollGreater() rea 0}}
-		    				{{#rollGreater() drain 1}}, <span data-i18n="drain">Drain</span> {{drain}}{{/rollGreater() drain 1}}
-		    				{{#rollLess() drain 2}}, <span data-i18n="drain-2">Drain 2<span>{{/rollLess() drain 2}}
-	    				</span>
-	    			</div>
-	    		{{/desc}}
-	    		{{#opp}}<div class="sheet-template-row">{{opp}}</div>{{/opp}}
-	    </div>
-    </rolltemplate>
 </div>
-<input type="hidden" name="attr_wounds" value="0" />
+<div class="rolltemplates">
+  <rolltemplate class="sheet-rolltemplate-rolls">
+    <div class="sheet-template-container">
+      <div class="sheet-template-header">{{#header}}
+        <h1>{{header}}</h1>{{/header}}
+        {{#base}}<span>{{base}}</span>{{/base}}
+        {{#rollLess() wound 0}}<span> ♦ </span><span data-i18n="wounds"></span>{{/rollLess() wound 0}}
+        {{#rollLess() mod 0}}<span> ♦ </span><span data-i18n="modifier"></span>{{/rollLess() mod 0}}
+        {{#rollGreater() mod 0}}<span> ♦ </span><span data-i18n="modifier"></span>{{/rollGreater() mod 0}}
+        {{#rollGreater() edge 0}}<span> ♦ </span><span data-i18n="edge"></span>{{/rollGreater() edge 0}}
+      </div>
+      <div class="sheet-template-body">{{#dice}}
+        <div class="sheet-template-row"><span class="inlinerollresult">{{dice}}</span></div>{{/dice}}
+        {{#desc}}
+        <div class="sheet-template-row"><span class="sheet-template-desc">
+             {{desc}}
+            {{#rollGreater() rea 0}}<span>,</span><span data-i18n="reach"></span>{{rea}}
+            {{/rollGreater() rea 0}}
+            {{#rollGreater() drain 1}}<span>,</span><span data-i18n="drain"></span>{{drain}}
+            {{/rollGreater() drain 1}}
+            {{#rollLess() drain 2}}<span>,</span><span data-i18n="drain-2"></span>{{drain}}
+            {{/rollLess() drain 2}}</span></div>{{/desc}}
+      </div>
+    </div>
+  </rolltemplate>
+</div><input type="hidden" name="attr_wounds" value="0" />
 <input type="hidden" name="attr_explode_toggle" value="" />
 <input type="hidden" name="attr_attribute_roll" value="" />
 
